Implement lazy loading for AUTO nodes (currently disabled)

--- a/www/index.html
+++ b/www/index.html
@@ -256,6 +256,10 @@
           border: 1px solid #335ea8;
           border-radius: 3px;
       }
+      //[data-name='marking.mark'] {
+      //    overflow-y: scroll;
+      //    height: 100px;
+      //}
       [data-name='endpoint.uri'] {
           legend + div {
               display: flex;
